# msgraph-mcp

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
client/: README.md  mcp_client.py  sample_client.py  system_get_profile_client.py
design/: appendix-open-source-research.md  architecture.md  auth-oauth2-pkce.md  operations.md  resiliency-and-scaling.md  tool-catalog.md
design/schemas/: calendar.tools.json  email.tools.json  onedrive.tools.json  system.tools.json
docs/: glossary.md
docs/decision-records/: 0001-architecture-decisions.md
infra/terraform/: README.md  autoscaling.tf  dynamodb.tf  ecs.tf  locals.tf  main.tf  outputs.tf  secrets.tf  variables.tf
infra/terraform/env/: dev.tfvars  preprod.tfvars  prod.tfvars  test.tfvars
load-tests/: README.md  locustfile.py
server/: README.md  pyproject.toml
server/msgraph_mcp/: __init__.py  __main__.py  app.py  auth.py  cache.py  config.py  context.py  errors.py  graph.py  logging.py  services.py  session.py  telemetry.py  token_store.py
server/msgraph_mcp/tools/: __init__.py  calendar.py  drive.py  mail.py  platform.py
server/tests/: conftest.py  test_auth.py  test_auth_complete.py  test_auth_exchange.py  test_cache.py  test_platform.py  test_services.py  test_session.py  test_token_refresh.py
